plugins/devkit/testData/inspections/presentation/InvalidIconConstant.java
import com.intellij.ide.presentation.Presentation;

@Presentation(icon = <error descr="Cannot resolve symbol 'InvalidIconConstant.ICON_PATH'">InvalidIconConstant.ICON_PATH</error>)
public class InvalidIconConstant {
  static final String ICON_PATH = "InvalidIconPath";
}